--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Gerador de Senhas Seguras</h1>
     <button>Gerar Senha Segura</button>
     <h2>...</h2>
+    <p><strong>Observação:</strong> Para copiar a senha gerada basta clicar 1x em cima dela.</p>
   </main>
 
   <script src="/src/main.js" type="module"></script>
